Aggiunta Tipografia Aggiunto Tag img Aggiunti Colori Aggiunto View Source

--- a/presentazione/css/custom.css
+++ b/presentazione/css/custom.css
@@ -10,3 +10,56 @@ div.codeContainer pre {
   word-wrap: break-word;
 
 }
+
+#tipografia h1 { font-size:100%; display:inline-block; }
+#tipografia h2 { font-size:90%; display:inline-block; }
+#tipografia h3 { font-size:80%; display:inline-block; }
+#tipografia h4 { font-size:70%; display:inline-block; }
+#tipografia h5 { font-size:60%; display:inline-block; }
+#tipografia h6 { font-size:50%; display:inline-block; }
+
+#immagini b {
+    display: inline-block;
+    -webkit-transition: 0.5s;
+    -moz-transition:    0.5s;
+    -ms-transition:     0.5s;
+    -o-transition:      0.5s;
+    transition:         0.5s;
+}
+
+#immagini.present .rotating {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform:    rotate(-10deg);
+    -ms-transform:     rotate(-10deg);
+    -o-transform:      rotate(-10deg);
+    transform:         rotate(-10deg);
+
+    -webkit-transition-delay: 0.25s;
+    -moz-transition-delay:    0.25s;
+    -ms-transition-delay:     0.25s;
+    -o-transition-delay:      0.25s;
+    transition-delay:         0.25s;
+}
+
+#immagini img {
+    display: inline-block;
+    -webkit-transition: 0.5s;
+    -moz-transition:    0.5s;
+    -ms-transition:     0.5s;
+    -o-transition:      0.5s;
+    transition:         0.5s;
+}
+
+#immagini.present img.rotating {
+    -webkit-transform: rotate(10deg);
+    -moz-transform:    rotate(10deg);
+    -ms-transform:     rotate(10deg);
+    -o-transform:      rotate(10deg);
+    transform:         rotate(10deg);
+
+    -webkit-transition-delay: 0.25s;
+    -moz-transition-delay:    0.25s;
+    -ms-transition-delay:     0.25s;
+    -o-transition-delay:      0.25s;
+    transition-delay:         0.25s;
+}
